[package]
authors = ["Nodle <support@nodle.com>", "Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2021"
name = "nodle-parachain"
version = "2.0.19"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[[bin]]
name = "nodle-parachain"
path = "src/main.rs"

[features]
runtime-benchmarks = [
	"frame-benchmarking",
	"runtime-eden/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"runtime-eden/try-runtime"
]

[dependencies]
clap = { version = "3.1", features = ["derive"] }
derive_more = "0.99.2"
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.132", features = ["derive"] }
hex-literal = "0.3.4"

# RPC related Dependencies
jsonrpc-core = "18.0.0"

# Local Dependencies
runtime-eden = { path = "../../runtimes/eden" }
primitives = { version = "2.0.17", path = "../../primitives" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.20" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

## Substrate Primitive Dependencies
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.20" }
