[package]
authors = ["Nodle <support@nodle.com>", "Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2021"
name = "nodle-parachain"
version = "2.0.18"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

[[bin]]
name = "nodle-parachain"
path = "src/main.rs"

[features]
runtime-benchmarks = [
	"frame-benchmarking",
	"runtime-eden/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"runtime-eden/try-runtime"
]

[dependencies]
clap = { version = "3.1", features = ["derive"] }
derive_more = "0.99.2"
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.132", features = ["derive"] }
hex-literal = "0.3.4"

# RPC related Dependencies
jsonrpc-core = "18.0.0"

# Local Dependencies
runtime-eden = { path = "../../runtimes/eden" }
primitives = { version = "2.0.17", path = "../../primitives" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.22" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

## Substrate Primitive Dependencies
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.22" }
