[package]
name = "pallet-allocations"
version = { workspace = true }
authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
edition = "2021"
description = "A pallet to handle the Proof Of Connectivity allocations rewards"

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-membership/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", optional = true, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = [  "derive",] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
support = { path = "../../support", default-features = false }

[dev-dependencies]
sp-tracing = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
pallet-membership = { workspace = true, default-features = false }
lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
