[package]
name = "pallet-amendments"
version = "2.0.15"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2021"
description = "A pallet to let precise modules amend the state of the chain"

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "serde",
  "frame-support/std",
  "frame-system/std",
  "pallet-scheduler/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]

[dependencies]
parity-scale-codec = { version = "2.2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.133", optional = true, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.13" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.13" }
