[package]
authors = ['Parallel Team']
edition = '2021'
name    = 'pallet-asset-registry'
version = '1.8.4'

[dependencies]
log   = { version = '0.4', default-features = false }
serde = { version = '1.0.136', optional = true }

# Substrate
frame-support      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
frame-system       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
pallet-traits      = { path = '../traits', default-features = false }
parity-scale-codec = { version = '3.0.0', default-features = false, features = ['derive'] }
scale-info         = { version = '2.1', default-features = false, features = ['derive'] }
sp-io              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
sp-runtime         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }
sp-std             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", default-features = false }

# Polkadot
xcm = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.22", default-features = false }

# Benchmarks
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22", optional = true, default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-core         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }

[features]
default            = ['std']
runtime-benchmarks = ['frame-benchmarking']
std                = [
  'frame-support/std',
  'frame-system/std',
  'parity-scale-codec/std',
  'pallet-traits/std',
  'scale-info/std',
  'serde',
  'sp-io/std',
  'sp-runtime/std',
  'sp-std/std',
  'xcm/std',
]
try-runtime        = ['frame-support/try-runtime']
