[package]
name = "author-inherent"
version = "0.6.0"
description = "Inject the block author via an inherent, and persist it via a Consensus digest"
authors = ["PureStake"]
edition = "2018"
license = 'GPL-3.0-only'

[dependencies]
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-authorship = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }

[dev-dependencies]
sp-io = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
serde = { version = "1.0.101", features = ["derive"] }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"sp-authorship/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
]
