[package]
name = "pallet-emergency-shutdown"
version = "2.0.0"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std",
  "serde",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",

  # Fix #105
  "pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
  "frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
serde = { version = "1.0.116", optional = true, features = ["derive"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

# Fix #105
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }


[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
