[package]
name = "pallet-emergency-shutdown"
version = "2.0.1"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std",
  "serde",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",

  # Fix #105
  "pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
  "frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]

[dependencies]
frame-benchmarking = { version = "3.1.0", default-features = false, optional = true }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
parity-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.116", optional = true, features = ["derive"] }
sp-io = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

# Fix #105
pallet-balances = { version = "3.0.0", default-features = false }


[dev-dependencies]
sp-core = { version = "3.0.0", default-features = false }
