[package]
name = "pallet-grants"
description = "Provides scheduled balance locking mechanism, in a *graded vesting* way."
license = "Apache-2.0"
version = "2.4.2"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
	"log/std",
	"codec/std",
	"serde",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, tag = "polkadot-v1.5.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.5.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.5.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.5.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.5.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.5.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.5.0" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.5.0" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.5.0" }

