[package]
name = "pallet-grants"
description = "Provides scheduled balance locking mechanism, in a *graded vesting* way."
license = "Apache-2.0"
version = { workspace = true }
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
	"log/std",
	"codec/std",
	"serde",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = false }
sp-tracing = { workspace = true, default-features = false }

