[package]
name = "pallet-grants"
description = "Provides scheduled balance locking mechanism, in a *graded vesting* way."
license = "Apache-2.0"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
	"log/std",
	"codec/std",
	"serde",
	"frame-support/std",
	"frame-benchmarking/std",

	"frame-system/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
log = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, optional = true }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
hex-literal = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = false }
sp-tracing = { workspace = true, default-features = false }
