[package]
name = "pallet-mandate"
version = "2.4.2"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2021"

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", optional = true, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = [
  "derive",
] }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, tag = "polkadot-v1.6.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.6.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.6.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.6.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.6.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.6.0" }
